arr/maintainerr/maintainerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
  namespace: arr
  labels:
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: maintainerr
      app.kubernetes.io/part-of: arr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maintainerr
        app.kubernetes.io/part-of: arr
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: maintainerr
          image: jorenn92/maintainerr:2.18.2
          ports:
            - containerPort: 6246
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /opt/data
              name: config
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/arr/maintainerr
            server: 192.168.86.107
