arr/maintainerr/maintainerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  namespace: arr
  labels:
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/part-of: arr
  ports:
    - protocol: TCP
      port: 6246
      targetPort: 6246
