arr/maintainerr/maintainerr-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maintainerr
  namespace: arr
  labels:
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`maintainerr.flexflix.top`)
      kind: Rule
      services:
        - name: maintainerr
          port: 6246
      middlewares:
        - name: authentik
          namespace: authentik
